objects/Permission_Partner_Association__c.object
<CustomObject>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>permission_partner_association</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PermissionSetName__c</fullName>
        <formula>TEXT(Programs_and_permissions__r.PermissionSets__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PermissionSetName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programs_and_permissions__c</fullName>
        <label>Programs and permissions</label>
        <referenceTo>Programs_and_permissions__c</referenceTo>
        <relationshipName>permission_partner_association</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Permission Partner Association</label>
    <nameField>
        <displayFormat>PPA-{000000}</displayFormat>
        <label>Permission Partner Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Partner Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>